<resources>
    <string name="app_name">TouchalyticsApp</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->

    <string name="previous_page">Previous Page</string>
    <string name="next_page">Next Page</string>

    <string name="user_login">User Login</string>
    <string name="user_id_description">Please enter the User ID you wish to use to log in to the application</string>
    <string name="enter_user_id_here">Enter User ID here</string>
    <string name="login">Login</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password_q">Forgot password?</string>
    <string name="no_account">No account?</string>
    <string name="create_account">Create account</string>
    <string name="privacy_sentence">By using this application, you agree to our Privacy Policy</string>

    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="already_have_account_login">Already have an account? Login</string>

    <string name="verify">Verify</string>
    <string name="verify_subtitle">Please check your email and enter the six-digit code</string>
    <string name="verify_subtitle_with_email">We sent a six-digit code to %1$s. Enter it below.</string>
    <string name="enter_code">Enter code</string>
    <string name="resend_code">Resend code</string>
    <string name="change_email">Change email</string>
    <string name="continue_label">Continue</string>

</resources>