<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".LoginActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_login"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/user_id_description"
            android:textSize="14sp"
            android:layout_marginBottom="30dp" />

        <EditText
            android:id="@+id/userIDInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_user_id_here"
            android:textAlignment="center"
            android:inputType="number"
            android:autofillHints="phone"
            android:layout_marginBottom="30dp"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login" />

    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>